--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=CloudKitchen_Codedy_TechWiz
 APP_ENV=local
 APP_KEY=base64:sDnuBCI4Qr6yjqrvCPvO7DJwho+npmQW7ndpzahCRPo=
 APP_DEBUG=true
@@ -27,11 +27,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=CODEDY.dev@gmail.com
+MAIL_PASSWORD=xwhmnmktmqjafkwj #Laravel_CloudKitchen
+MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
