--- a/.env.example.epizy
+++ b/.env.example.epizy
@@ -1,18 +1,18 @@
-APP_NAME=Laravel
+APP_NAME=CloudKitchen_Codedy_TechWiz
 APP_ENV=local
 APP_KEY=base64:sDnuBCI4Qr6yjqrvCPvO7DJwho+npmQW7ndpzahCRPo=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://cloud-kitchen.codedy.epizy.com
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=sql109.epizy.com
 DB_PORT=3306
-DB_DATABASE=admin_codedy
-DB_USERNAME=admin_codedy
-DB_PASSWORD=abc123
+DB_DATABASE=epiz_26682605_Codedy_TechWiz_FoodMate
+DB_USERNAME=epiz_26682605
+DB_PASSWORD=Hieu8896
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -27,11 +27,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=CODEDY.dev@gmail.com
+MAIL_PASSWORD=xwhmnmktmqjafkwj #Laravel_CloudKitchen
+MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
