--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=CloudKitchen_Codedy_TechWiz
 APP_ENV=local
-APP_KEY=base64:sDnuBCI4Qr6yjqrvCPvO7DJwho+npmQW7ndpzahCRPo=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
